# raytracer

./: Cargo.toml  README.md
scenes/: cornell.toml  cornell_glass.toml  cornell_metal.toml  spheres.toml  triangle.toml
src/: aabb.rs  bvh.rs  camera.rs  cube.rs  help.txt  hitable.rs  main.rs  material.rs  onb.rs  ray.rs  rect.rs  rendertile.rs  settings.rs  sphere.rs  texture.rs  transform.rs  vector3.rs  volume.rs  world.rs
src/hitable/: cube.rs  mesh.rs  mod.rs  rect.rs  sphere.rs  triangle.rs  volume.rs
src/material/: dielectric.rs  diffuselight.rs  lambertian.rs  metal.rs  mod.rs  nomaterial.rs  scatterrecord.rs
src/noise/: mod.rs  perlin.rs
src/pdf/: cosinepdf.rs  hitablepdf.rs  mixturepdf.rs  mod.rs
